Restructured installation manual